--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Django==5.0.3
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
-django-cors-headers==4.3.1
-mysqlclient==2.2.4
-python-dotenv==1.0.1
-pyotp==2.9.0
-requests==2.32.3
-gunicorn==21.2.0
+asgiref==3.9.1
+Django==5.2.4
+mysql-connector==2.2.9
+pytz==2024.1
+sortedcontainers==2.4.0
+sqlparse==0.5.3
+tzdata==2025.2
+urllib3==2.2.1
+validate-email-address==1
+websockets==12.0
