--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.9.1
+decouple==0.0.7
+dj-database-url==3.0.1
 Django==5.2.4
 mysql-connector==2.2.9
+psycopg2-binary==2.9.10
+python-decouple==3.8
 pytz==2024.1
 sortedcontainers==2.4.0
 sqlparse==0.5.3
